[build-system]
requires = ["flit_core == 3.8"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "zitadelle"
author = "Florian Benkö"
author-email = "florian.benkoe2@web.de"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
]


requires-python = "==3.11"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==7.2.0",
    "flake8 == 5.0.4"
]